Fix wrong overflow-x style set

--- a/src/screens/EditProfile/style.css
+++ b/src/screens/EditProfile/style.css
@@ -1,5 +1,5 @@
 .edit-profile-container {
-  overflow-x: unset;
+  overflow-x: hidden;
 }
 
 .edit-screen-content {
