--- a/src/screens/EventsListScreen/style.css
+++ b/src/screens/EventsListScreen/style.css
@@ -1,5 +1,5 @@
 .event-list-container {
-  overflow-x: unset;
+  overflow-x: hidden;
 }
 
 .event-list {
