--- a/src/screens/OrganizationScreen/style.css
+++ b/src/screens/OrganizationScreen/style.css
@@ -1,5 +1,5 @@
 .organization-container {
-  overflow-x: unset;
+  overflow-x: hidden;
 }
 
 .organization-header {
