--- a/src/screens/SettingsScreen/style.css
+++ b/src/screens/SettingsScreen/style.css
@@ -1,5 +1,5 @@
 .settings-screen-container {
-  overflow-x: unset;
+  overflow-x: hidden;
 }
 
 .settings-screen-content {
